--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "celery>=5.6.2",
     "django>=6.0",
     "langchain[openai]>=1.2.0",
     "pydantic>=2.12.5",
     "python-dotenv>=1.2.1",
+    "redis>=7.1.0",
     "requests>=2.32.5",
 ]
