--- a/job-SAAS/docker-compose.yml
+++ b/job-SAAS/docker-compose.yml
@@ -4,7 +4,7 @@ services :configs:
       env_file :
         - .env
       volumes:
-        ./ : /app 
+        -./ : /app 
       ports:
         -'8000:8000'
       restart : always
